refactor : meal and dish domain